--- a/app/globals.css
+++ b/app/globals.css
@@ -1,3 +1,13 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.custom-shadow {
+  box-shadow: 0px 10px 0px -5px #000000 !important;
+  /* transform: translate(-5px, -5px); */
+}
+
+.custom-shadow:disabled {
+  box-shadow: 0 10px 0px -5px #97A1AC !important;
+  transform: translate(-5px, -5px) !important;
+}
